docs/pago-pa/sanp/3.0.0/ente-creditore/adesione.md
# Adesione

Per aderire a pagoPA in qualità di EC le Pubbliche Amministrazioni, i gestori di pubblici servizi e le società a controllo pubblico devono utilizzare il Portale delle Adesioni messo a disposizione da PagoPA S.p.A.

Il processo di adesione di un soggetto in qualità di EC prevede che:

* l’Ente faccia richiesta alla casella di posta [pagamenti@assistenza.pagopa.it](mailto:pagamenti@assistenza.pagopa.it) delle credenziali di “primo accesso” per adesione;
* con le credenziali ricevute si esegue il primo accesso al Portale delle Adesioni e si nomina il Referente dei Pagamenti;
* il Referente dei Pagamenti, con le credenziali nominali ricevute contestualmente alla nomina, accede al Portale delle Adesioni e procede con la compilazione della Lettera di Adesione. Sarà sua cura farla firmare digitalmente dal “firmatario” dichiarato in fase di compilazione e caricarla sul Portale delle Adesioni per ottenerne la validazione da parte di PagoPA S.p.A, così da completare il processo di adesione.

Gli EC, nel processo di attivazione sul sistema pagoPA, devono avvalersi del Portale delle Adesioni (PdA), che è lo strumento messo a disposizione di tutti quei soggetti che, con ruoli differenti, intervengono nel processo:

* i Referenti Pagamenti incaricati dagli EC;
* i Referenti Tecnici (e loro delegati) indicati dagli EC direttamente connessi alla piattaforma pagoPA e dai Partner Tecnologici;
* gli operatori della piattaforma dei pagamenti;
* PagoPA S.p.A.

Il Referente Pagamenti (RP) è la figura incaricata dall’EC, mediante delega del legale rappresentante, ad operare nell’ambito del sistema pagoPA per:

* indicare e gestire le connessioni alla piattaforma dell’EC;
* nominare il Referente Tecnico, in caso di connessione diretta dell’Ente alla piattaforma;
* gestire gli IBAN dei conti di accredito che l’EC intende utilizzare per l’incasso delle somme dovute;
* accedere al sistema di trouble-ticketing messo a disposizione da PagoPA S.p.A.;
* fornire a PagoPA S.p.A. tutti i dati necessari per abilitare all’utilizzo del sistema di trouble-ticketing messo a disposizione da PagoPA S.p.A. altri soggetti afferenti allo stesso Ente.&#x20;

Uno stesso Referente Pagamenti può essere designato da più EC.

Il Referente Tecnico (RT) è la figura tecnica di riferimento di un soggetto direttamente connesso alla piattaforma pagoPA (EC o Partner tecnologico). Ogni connessione di un EC prevede un Referente Tecnico: quello nominato dal Referente Pagamenti dell’EC (in caso di connessione diretta) oppure quello indicato dall’Intermediario/Partner Tecnologico (in caso di connessione intermediata).

Il Referente Tecnico sarà lo stesso per tutti gli enti che si avvalgono dell’Intermediario o Partner Tecnologico che lo ha nominato.

Il Referente Tecnico sarà abilitato ad accedere al sistema di trouble-ticketing messo a disposizione da PagoPA S.p.A. al fine di migliorare e ottimizzare le comunicazioni tra gli EC ed i Partner Tecnologici attestati sul sistema pagoPA e il Servizio di Assistenza a esso dedicato.

Sarà inoltre cura del Referente Tecnico fornire tutti i dati necessari ad abilitare altri componenti della sua struttura tecnica all’accesso al sistema di trouble-ticketing messo a disposizione di PagoPA S.p.A.

## Adesione tramite Intermediario Tecnologico <a href="#id-174vkd27dh7y" id="id-174vkd27dh7y"></a>

Il Referente dei Pagamenti di un EC che abbia deciso di connettersi alla piattaforma delegando le attività tecniche ad un Intermediario Tecnologico, deve:

* censire sul PdA una connessione con l’Intermediario Tecnologico prescelto;
* attivare tutti gli IBAN di accredito (operazione possibile solo se l’Ente abbia almeno una connessione in esercizio).

Per tutte le altre attività l’EC farà riferimento alla figura designata dall’Intermediario scelto, senza facoltà di nomina o sostituzione in forza dell’avvenuta delega delle attività tecniche.

Per attivare un EC, ovvero la sua connessione, il Referente Tecnico dell’Intermediario Tecnologico utilizzerà un’apposita funzionalità del PdA che gli consentirà di fornire a PagoPA S.p.A. tutti i dati richiesti. Per tutti i dettagli riguardanti le attività da eseguire sul PdA si potrà fare riferimento allo specifico manuale utente.

## Adesione avvalendosi di un Partner Tecnologico <a href="#godgz71r40mh" id="godgz71r40mh"></a>

Il Referente dei Pagamenti di un EC che abbia deciso di connettersi alla piattaforma delegando le attività tecniche ad un Partner Tecnologico deve:

* censire sul PdA una connessione intermediata dal Partner Tecnologico prescelto;
* attivare tutti gli IBAN di accredito dell’Ente (operazione possibile solo se l’Ente abbia almeno una connessione in Esercizio).

Per tutte le altre attività l’EC farà riferimento alla figura designata dal Partner Tecnologico scelto, senza facoltà di nomina o sostituzione in forza dell’avvenuta delega delle attività tecniche.

Il processo di avvio in esercizio di un EC che ha delegato un Partner Tecnologico risente del ruolo che l’Ente ricopre nell’attivazione del Partner sul sistema pagoPA.

Per un Partner Tecnologico, infatti, l’EC può rappresentare o l’Ente pilota, il primo EC per il quale il Partner attiva uno o più modelli di pagamento, oppure un nuovo EC che si aggiunge a quelli già intermediati dal Partner.

In riferimento a quanto sopra detto si ricorda che anche PagoPA S.p.A. potrebbe essere qualificata come Partner Tecnologico (cfr. [Ruolo e responsabilità di PagoPA S.p.A.](../specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ruoli.md#_rbtjsx52ef6i)).
